--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,11 +1,11 @@
 // colors
 $color-primary: #1d9a8d;
 $color-cancel: #c94754;
-$background-primary-hover: #ccfffa;
+$background-primary-hover: #d4edda;
 $background-cancel-hover: #ffccd1;
 $backgroung-default: #eff0f4;
 // definition width size with maps
-$with-size: ( smallSize: 95%, defaultSize: 97%, );
+$width-size: ( smallSize: 90%, defaultSize: 97%, );
 
 /* Definition screen size */
 
