--- a/sass/main.scss
+++ b/sass/main.scss
@@ -58,13 +58,15 @@ hr {
 
 .msg-info {
     position: relative;
-    padding: 0.75rem 1.25rem;
     margin-bottom: 1rem;
     border: 1px solid transparent;
     border-radius: 0.25rem;
     color: $color-primary;
     background-color: $background-primary-hover;
     border-color: #c3e6cb;
+    width: 55%;
+    justify-content: center;
+    font-weight: bold;
     @extend %ele--center;
 }
 
